Avoid linewrap in dropdown menu (fixes IE9 issue)

--- a/indico/htdocs/sass/partials/_toolbars.scss
+++ b/indico/htdocs/sass/partials/_toolbars.scss
@@ -107,6 +107,10 @@
     & .dropdown {
         display: none;
         z-index: 1;
+
+        & > li {
+            white-space: nowrap;
+        }
     }
 
     & .group {
